add form and btn

--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <form action="" name="form">
+      <textarea name="text" cols="30" rows="10">Введите текст для печати</textarea>
+    </form>
+    <button id="btn">Печатать</button>
     <script src="app.js"></script>
   </body>
 </html>
