add print area and random

--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -11,6 +11,7 @@
       <textarea name="text" cols="30" rows="10">Введите текст для печати</textarea>
     </form>
     <button id="btn">Печатать</button>
+    <p id="printArea"></p>
     <script src="app.js"></script>
   </body>
 </html>
